--- a/css/allatstyle.css
+++ b/css/allatstyle.css
@@ -1,9 +1,10 @@
 html
 {
     font-family: sans-serif;
+    background-image: ();
 }
 h1 {
-    color:red;
+    color:rgb(184, 111, 111);
   
 }
 #bekak{
@@ -24,4 +25,17 @@ h1 {
 }
 #pandavideo{
     font-style: italic;
+}
+#piros{
+    color: red
+}
+#orange{
+    color: orange
+}
+#green{
+    color: green
+}
+
+#alahuz{
+    text-decoration: underline;
 }
