--- a/css/page.css
+++ b/css/page.css
@@ -1,3 +1,10 @@
 .bgcolor {
   background-color: rgba(161, 252, 181, 0.322);
 }
+
+.frogimg {
+  background-color: rgba(0, 128, 0, 0.226);
+}
+.lizardimg {
+  background-color: rgba(0, 128, 0, 0.226);
+}
