--- a/css/text.css
+++ b/css/text.css
@@ -1,22 +1,44 @@
-.headrow {
-  color: rgb(74, 136, 87);
-  text-align: center;
-  font-family: sans-serif;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.397);
-  border-style: groove;
-  border-color: chocolate;
-  padding: 3px;
-  border-top: none;
-}
-.pagenavigator {
+.navbuttons {
   color: rgb(38, 51, 40);
   font-family: cursive;
   text-decoration: none;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.397);
-  border-style: groove;
-  border-color: chocolate;
-  padding: 1px;
-  border-left: none;
-  border-top: none;
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.397);
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.navbuttons:hover {
+  background-color: rgba(141, 131, 102, 0.212);
+}
+
+.ulnavstyle {
+  padding-left: 0px;
+  margin: 5px;
+  list-style: none;
+}
+.headrowposition {
+  color: rgb(74, 136, 87);
+  text-align: center;
+  font-family: sans-serif;
+  padding-right: 1%;
+  padding-left: 10px;
+  padding-bottom: none;
+  border-bottom: none;
+  border-right: none;
+  list-style: none;
+}
+.setstatic {
+  position: fixed;
+  object-position: center;
+  align-items: center;
+  left: 94px;
+  min-width: 100%;
+  background-color: rgba(141, 131, 102, 0.077);
+}
+.setstatic2 {
+  position: fixed;
+  object-position: center;
+  align-items: center;
+  float: left;
+  background-color: rgba(141, 131, 102, 0.077);
+  padding-bottom: 300px;
 }
