--- a/css/text.css
+++ b/css/text.css
@@ -7,7 +7,7 @@
   padding-right: 5px;
 }
 .navbuttons:hover {
-  background-color: rgba(141, 131, 102, 0.212);
+  background-color: rgba(92, 121, 112, 0.24);
 }
 
 .ulnavstyle {
@@ -16,7 +16,7 @@
   list-style: none;
 }
 .headrowposition {
-  color: rgb(74, 136, 87);
+  color: rgb(95, 90, 90);
   text-align: center;
   font-family: sans-serif;
   padding-right: 1%;
@@ -26,19 +26,22 @@
   border-right: none;
   list-style: none;
 }
-.setstatic {
+.setstaticheadrow {
   position: fixed;
   object-position: center;
   align-items: center;
   left: 94px;
   min-width: 100%;
   background-color: rgba(141, 131, 102, 0.077);
+  top: 0px;
 }
-.setstatic2 {
+.setstaticnav {
   position: fixed;
   object-position: center;
   align-items: center;
   float: left;
+  top: 0px;
   background-color: rgba(141, 131, 102, 0.077);
   padding-bottom: 300px;
+  padding-top: 60px;
 }
