--- a/css/text.css
+++ b/css/text.css
@@ -1,6 +1,6 @@
 .navbuttons {
   color: rgb(38, 51, 40);
-  font-family: cursive;
+  font-family: cursive, Cambria, Cochin, Georgia, Times;
   text-decoration: none;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.397);
   padding-left: 5px;
@@ -19,8 +19,8 @@
   color: rgb(95, 90, 90);
   text-align: center;
   font-family: sans-serif;
-  padding-right: 1%;
-  padding-left: 10px;
+  padding-right: 10%;
+  padding-left: 0px;
   padding-bottom: none;
   border-bottom: none;
   border-right: none;
