--- a/css/text.css
+++ b/css/text.css
@@ -1,10 +1,11 @@
 .navbuttons {
-  color: rgb(38, 51, 40);
+  color: rgba(67, 73, 71, 0.822);
   font-family: cursive, Cambria, Cochin, Georgia, Times;
+  font-weight: 500;
+  font-size: 18px;
   text-decoration: none;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.397);
-  padding-left: 5px;
-  padding-right: 5px;
+  text-shadow: 1.5px 1.5px 5px rgba(0, 0, 0, 0.397);
+  padding-right: 1.7px;
 }
 .navbuttons:hover {
   background-color: rgba(92, 121, 112, 0.24);
@@ -16,8 +17,10 @@
   list-style: none;
 }
 .headrowposition {
-  color: rgb(95, 90, 90);
+  z-index: 1;
+  color: rgba(67, 73, 71, 0.822);
   text-align: center;
+  text-shadow: 1.5px 1.5px 5px rgba(0, 0, 0, 0.397);
   font-family: sans-serif;
   padding-right: 10%;
   padding-left: 0px;
@@ -27,21 +30,23 @@
   list-style: none;
 }
 .setstaticheadrow {
+  z-index: 1;
   position: fixed;
-  object-position: center;
-  align-items: center;
   left: 94px;
   min-width: 100%;
-  background-color: rgba(141, 131, 102, 0.077);
+  background-color: rgb(218, 243, 212);
   top: 0px;
+  margin-bottom: 25px;
 }
 .setstaticnav {
   position: fixed;
   object-position: center;
   align-items: center;
-  float: left;
   top: 0px;
-  background-color: rgba(141, 131, 102, 0.077);
-  padding-bottom: 300px;
+  background-color: rgba(218, 243, 212);
+  padding-bottom: 100%;
   padding-top: 60px;
+}
+.linavstyle {
+  margin-bottom: 10px;
 }
