--- a/css/text.css
+++ b/css/text.css
@@ -48,6 +48,7 @@
   background-color: rgba(218, 243, 212);
   padding-bottom: 100%;
   padding-top: 60px;
+  margin-right: 22px;
 }
 .linavstyle {
   margin-bottom: 10px;
