--- a/css/page.css
+++ b/css/page.css
@@ -5,7 +5,7 @@
 .imgfrog {
   z-index: -1;
   width: 562px;
-  height: 450px;
+  height: 420px;
   position: relative;
   left: 115px;
   top: 100px;
@@ -36,4 +36,9 @@
 
 .body {
   background-image: url;
+}
+.form-position {
+  position: relative;
+  left: 100px;
+  top: 100px;
 }
