--- a/css/text.css
+++ b/css/text.css
@@ -34,7 +34,8 @@
 .setstaticheadrow {
   z-index: 1;
   position: fixed;
-  min-width: calc(100% - 94px);
+  left: 94px;
+  min-width: 100%;
   background-color: rgb(218, 243, 212);
   top: 0px;
   margin-bottom: 25px;
