--- a/css/order.css
+++ b/css/order.css
@@ -1,32 +1,3 @@
-.megrendelőadatai {
-  font-family: sans-serif;
-  position: absolute;
-  text-align: center;
-  top: 107px;
-  left: 200px;
-  width: 270px;
-  padding: 2px 2px 2px 2px;
-  border: rgba(41, 61, 61, 0.295) solid;
-
-  background-color: rgba(161, 252, 181, 0.322);
-}
-.megjegyzés {
-  font-family: sans-serif;
-  position: static;
-  box-sizing: content-box;
-  margin-top: 20px;
-  width: 300px;
-  height: 50px;
-  text-align: center;
-
-  text-align-last: center;
-  background-color: transparent;
-  border: 0px;
-  border-left: 1px solid rgba(41, 61, 61, 0.15);
-  border-right: 1px solid rgba(41, 61, 61, 0.15);
-  border-bottom: 1px solid rgba(41, 61, 61, 0.295);
-  resize: none;
-}
 .input-fields {
   font-family: sans-serif;
   display: flexbox;
@@ -34,7 +5,6 @@
   background-color: transparent;
   border-top: transparent;
 }
-
 .input {
   font-family: sans-serif;
   margin-top: 5px;
@@ -46,9 +16,8 @@
   border-bottom: 1px solid rgba(41, 61, 61, 0.295);
   text-align: center;
   font-size: 17px;
-  width: 300px;
+  width: 280px;
 }
-
 ::-webkit-input-placeholder {
   color: rgb(163, 158, 158);
   font-style: italic;
@@ -64,17 +33,13 @@
   font-style: italic;
   font-size: 12px;
 }
-.személyesadatok {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-}
 .button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-color: rgba(41, 61, 61, 0.295);
+  background-color: rgba(220, 197, 170, 0.637);
   width: 30%;
   position: relative;
-  left: 140px;
+  left: 100px;
   border-radius: 5px;
   padding-top: 2px;
   padding-bottom: 4px;
@@ -82,8 +47,35 @@
   margin-top: 8px;
 }
 .button:hover {
-  background-color: lightgreen;
+  background-color: rgba(41, 61, 61, 0.295);
 }
 #textarea {
   resize: none;
+}
+.comment {
+  font-family: sans-serif;
+  position: static;
+  box-sizing: content-box;
+  margin-top: 20px;
+  width: 280px;
+  height: 50px;
+  text-align: center;
+  text-align-last: center;
+  background-color: transparent;
+  border: 0px;
+  border-left: 1px solid rgba(41, 61, 61, 0.15);
+  border-right: 1px solid rgba(41, 61, 61, 0.15);
+  border-bottom: 1px solid rgba(41, 61, 61, 0.295);
+  resize: none;
+}
+.personaldata {
+  background-color: rgba(220, 197, 170, 0.637);
+  width: 200px;
+  align-items: center;
+  align-content: center;
+  position: relative;
+  left: 45px;
+  top: 4px;
+}
+.middle-item {
 }
