--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav ul {
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  margin: 0px;
 }
 nav ul li a {
   color: white;
