--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  line-height: 80px;
+  position: relative;
+  top: 27px;
   margin: 0px;
 }
 nav ul li a {
@@ -93,4 +94,10 @@ a:hover {
     left: 0;
     outline: none;
   }
+}
+::selection {
+  background: #ffb7b700;
+}
+::-moz-selection {
+  background: #ffb7b700;
 }
