--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
   margin: 0;
   text-decoration: none;
 }
+::selection {
+  color: none;
+  background: #00000000;
+}
+::-moz-selection {
+  color: none;
+  background: #00000000;
+}
+::-webkit-tap-highlight-color {
+  background: transparent;
+}
+
 *:focus {
   outline: none;
 }
@@ -39,6 +51,9 @@ nav ul li a {
 a:hover {
   background: rgba(105, 141, 48, 0.411);
   transition: 0.5s;
+}
+a:focus {
+  outline: none;
 }
 .checkbtn {
   font-size: 30px;
@@ -90,14 +105,11 @@ a:hover {
     border: 0;
     outline: none;
   }
+  a:focus {
+    outline: none;
+  }
   #check:checked ~ ul {
     left: 0;
     outline: none;
   }
-}
-::selection {
-  background: #ffb7b700;
-}
-::-moz-selection {
-  background: #ffb7b700;
 }
