--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav ul li a {
   border-radius: 3px;
 }
 
-a:hover {
+nav ul li:hover {
   background: rgba(105, 141, 48, 0.411);
   transition: 0.5s;
 }
@@ -79,12 +79,8 @@ a:hover {
     font-size: 20px;
     display: block;
   }
-  a:hover {
+  nav ul li:hover {
     background: rgba(105, 141, 48, 0.411);
-    padding-left: 20vh;
-    padding-right: 20vh;
-    margin: 0;
-    border: 0;
   }
 
   #check:checked ~ ul {
