--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ nav ul li a {
   color: white;
   font-size: 20px;
   text-transform: uppercase;
-  padding: 7px 13px;
+
   border-radius: 3px;
 }
 
-a:hover {
+nav ul li:hover {
   background: rgba(105, 141, 48, 0.411);
   transition: 0.5s;
 }
@@ -83,20 +83,19 @@ a:hover {
   }
   nav ul li {
     display: flex;
-
-    margin: 30px;
     justify-content: space-around;
   }
   nav ul li a {
     font-size: 20px;
     display: block;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 50vh;
+    padding-right: 50vh;
   }
-  a:hover {
+  nav ul li:hover {
     background: rgba(105, 141, 48, 0.411);
-    padding-left: 20%;
-    padding-right: 20%;
-    margin: 0;
-    border: 0;
+    transition: 0.5s;
   }
 
   #check:checked ~ ul {
