--- a/style.css
+++ b/style.css
@@ -6,17 +6,6 @@
   margin: 0;
   text-decoration: none;
 }
-::selection {
-  color: none;
-  background: #00000000;
-}
-::-moz-selection {
-  color: none;
-  background: #00000000;
-}
-::-webkit-tap-highlight-color {
-  background: transparent;
-}
 
 body {
   font-family: monospace;
@@ -24,7 +13,7 @@ body {
 
 nav {
   background: rgb(207, 181, 143);
-  height: 80px;
+  height: 60px;
   width: 100%;
 }
 nav ul {
@@ -35,14 +24,15 @@ nav ul {
 nav ul li {
   display: inline-block;
   position: relative;
-  top: 27px;
+  top: 1px;
   margin: 0px;
+  padding: 18px;
 }
 nav ul li a {
   color: white;
   font-size: 20px;
   text-transform: uppercase;
-
+  margin-bottom: 10px;
   border-radius: 3px;
 }
 
@@ -56,8 +46,8 @@ nav ul li:hover {
   display: none;
   float: right;
   position: relative;
-  top: 25px;
-  margin-right: 40px;
+  top: 15px;
+  margin-right: 20px;
   cursor: pointer;
   display: none;
   color: white;
@@ -67,7 +57,7 @@ nav ul li:hover {
   background: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .checkbtn {
     display: inline-block;
     background: none;
@@ -77,7 +67,7 @@ nav ul li:hover {
     width: 100%;
     height: 100vh;
     background: rgb(139, 139, 138);
-    top: 80px;
+    top: 60px;
     left: -100%;
     text-align: center;
   }
@@ -92,6 +82,8 @@ nav ul li:hover {
     padding-bottom: 7px;
     padding-left: 50vh;
     padding-right: 50vh;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   nav ul li:hover {
     background: rgba(105, 141, 48, 0.411);
