--- a/style.css
+++ b/style.css
@@ -12,28 +12,30 @@ body {
 }
 
 nav {
-  background: rgb(207, 181, 143);
-  height: 60px;
+  background: rgb(139, 139, 138);
+  height: 30px;
   width: 100%;
 }
 nav ul {
   margin-right: 20px;
   float: right;
+  cursor: pointer;
 }
 
 nav ul li {
   display: inline-block;
-  position: relative;
-  top: 1px;
-  margin: 0px;
-  padding: 18px;
+  padding-top: 3.5px;
+  padding-bottom: 3.5px;
 }
 nav ul li a {
   color: white;
   font-size: 20px;
   text-transform: uppercase;
-  margin-bottom: 10px;
-  border-radius: 3px;
+  padding-top: 3.5px;
+  padding-bottom: 3.5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: relative;
 }
 
 nav ul li:hover {
@@ -46,7 +48,7 @@ nav ul li:hover {
   display: none;
   float: right;
   position: relative;
-  top: 15px;
+  bottom: 2px;
   margin-right: 20px;
   cursor: pointer;
   display: none;
@@ -57,7 +59,7 @@ nav ul li:hover {
   background: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1000px), (max-height: 100px) {
   .checkbtn {
     display: inline-block;
     background: none;
@@ -67,23 +69,23 @@ nav ul li:hover {
     width: 100%;
     height: 100vh;
     background: rgb(139, 139, 138);
-    top: 60px;
+    top: 30px;
     left: -100%;
     text-align: center;
   }
   nav ul li {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
   }
   nav ul li a {
     font-size: 20px;
     display: block;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 50vh;
     padding-right: 50vh;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
   nav ul li:hover {
     background: rgba(105, 141, 48, 0.411);
