--- a/style.css
+++ b/style.css
@@ -58,8 +58,18 @@ nav ul li:hover {
   display: none;
   background: none;
 }
+.material-icons {
+  color: #000000;
+  background-color: rgba(105, 141, 48, 0.411);
+  position: relative;
+  left: 95%;
+  top: 20px;
+  margin: 10px;
+  padding: 10px;
+  z-index: 99;
+}
 
-@media (max-width: 1000px), (max-height: 100px) {
+@media (max-width: 1100px), (max-height: 100px) {
   .checkbtn {
     display: inline-block;
     background: none;
@@ -84,8 +94,7 @@ nav ul li:hover {
     display: block;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 50vh;
-    padding-right: 50vh;
+    min-width: 100vh;
   }
   nav ul li:hover {
     background: rgba(105, 141, 48, 0.411);
@@ -96,4 +105,17 @@ nav ul li:hover {
     left: 0;
     transition: 0.5s;
   }
+  .material-icons {
+    color: #000000;
+    background-color: rgba(105, 141, 48, 0.411);
+    position: relative;
+    left: 85%;
+    top: 20px;
+    margin: 10px;
+    padding: 10px;
+    z-index: 99;
+  }
+}
+footer {
+  height: 100px;
 }
