--- a/lizard.css
+++ b/lizard.css
@@ -1,26 +1,26 @@
 .lizardpictures {
-  width: 55vh;
-  height: 35vh;
+  display: flex;
+  width: 50%;
   padding: 3px 2px 2px 2px;
   margin: 0px;
   border: 0;
 }
-.lizardpic {
+#lizardpic {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  width: 100%;
 }
 @media (max-width: 1100px), (max-height: 100px) {
   .lizardpictures {
-    width: 55vh;
-    height: 35vh;
-    padding: 3px 2px 2px 2px;
+    display: flex;
+    width: 50%;
+    padding: 2px 2px 2px 2px;
     margin: 0px;
     border: 0;
   }
   .lizardpic {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    width: 100%;
   }
 }
