--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@
 
 body {
   font-family: monospace;
+  background: rgb(139, 139, 138);
 }
 
 nav {
   background: rgb(139, 139, 138);
   height: 30px;
   width: 100%;
+  position: fixed;
 }
 nav ul {
   margin-right: 20px;
@@ -74,13 +76,16 @@ nav ul li:hover {
     display: inline-block;
     background: none;
   }
+  nav {
+    position: fixed;
+  }
   nav ul {
     position: fixed;
     width: 100%;
     height: 100vh;
     background: rgb(139, 139, 138);
     top: 30px;
-    left: -100%;
+    left: -1000%;
     text-align: center;
   }
   nav ul li {
@@ -103,8 +108,9 @@ nav ul li:hover {
 
   #check:checked ~ ul {
     left: 0;
-    transition: 0.5s;
+    display: block;
   }
+
   .material-icons {
     color: #000000;
     background-color: rgba(105, 141, 48, 0.411);
@@ -118,4 +124,5 @@ nav ul li:hover {
 }
 footer {
   height: 100px;
+  display: block;
 }
