--- a/lizard.css
+++ b/lizard.css
@@ -1,11 +1,11 @@
 .lizardpictures {
   display: flex;
-  width: 50%;
+  width: 25%;
   padding: 3px 2px 2px 2px;
   margin: 0px;
   border: 0;
 }
-#lizardpic {
+.lizardpic {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -13,7 +13,7 @@
 @media (max-width: 1100px), (max-height: 100px) {
   .lizardpictures {
     display: flex;
-    width: 50%;
+    width: 25%;
     padding: 2px 2px 2px 2px;
     margin: 0px;
     border: 0;
