--- a/style.css
+++ b/style.css
@@ -80,13 +80,12 @@ nav ul li:hover {
     position: fixed;
   }
   nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: rgb(139, 139, 138);
-    top: 30px;
-    left: -1000%;
+    width: 50%;
+    position: relative;
+    top: 0px;
+    background: rgba(139, 139, 138, 0.897);
     text-align: center;
+    display: none;
   }
   nav ul li {
     display: flex;
@@ -102,7 +101,7 @@ nav ul li:hover {
     min-width: 100vh;
   }
   nav ul li:hover {
-    background: rgba(105, 141, 48, 0.411);
+    background: rgb(105, 141, 48);
     transition: 0.5s;
   }
 
